--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -7,7 +7,12 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  common:
+    path: ../common
   dart_frog: ^1.1.0
+  dotenv: ^4.2.0
+  postgres: ^3.5.0
+  shelf_cors_headers: ^0.1.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
