--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -14,4 +14,7 @@ dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
 dependencies:
+  crypto: ^3.0.6
+  equatable: ^2.0.7
   logger: ^2.5.0
+  meta: ^1.16.0
