--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,14 +30,13 @@ environment:
 dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  common:
+    path: ../common
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
-  freezed_annotation: ^2.4.4
-  hooks_riverpod: ^2.6.1
-  json_annotation: ^4.9.0
-  riverpod_annotation: ^2.6.1
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -45,15 +44,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  build_runner: ^2.4.14
   custom_lint: ^0.7.1
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^2.5.8
-  json_serializable: ^6.9.3
-  riverpod_generator: ^2.6.4
-  riverpod_lint: ^2.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
