--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     path: ../common
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
