--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     sdk: flutter
  
   go_router: ^14.7.1
+  intl: ^0.20.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
