--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
   flutter_web_plugins:
     sdk: flutter
