--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -11,14 +11,14 @@ dependencies:
     path: ../common
   crypto: ^3.0.6
   cryptography: ^2.7.0
-  dart_frog: ^1.1.0
   dotenv: ^4.2.0
   meta: ^1.16.0
   postgres: ^3.5.0
+  shelf: ^1.4.2
   shelf_cors_headers: ^0.1.5
+  shelf_router: ^1.1.4
 
 dev_dependencies:
   flutter_lints: ^5.0.0
   mocktail: ^1.0.3
   test: ^1.25.5
-  very_good_analysis: ^5.1.0
